--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <title></title>
-    <link href="/index.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="index.css" media="all" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <script src="/lib/mithril.js"></script>
-    <script src="/index.js"></script>
+    <script src="lib/mithril.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
